<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/mode_reset"
        android:title="@string/mode_reset" />
    <item android:id="@+id/mode_add"
        android:title="@string/mode_add" />
    <item android:id="@+id/mode_connect"
        android:title="@string/mode_connect" />
    <item android:id="@+id/mode_move"
        android:title="@string/mode_move"/>
    <item android:id="@+id/mode_edit"
        android:title="@string/mode_edit" />
    <item android:id="@+id/saveNetwork" android:title="@string/save_network"/>
    <item android:id="@+id/viewSavedNetwork" android:title="@string/view_saved_network"/>
    <item android:id="@+id/viewImportSavedNetwork" android:title="Importer un réseau sauvegardé"/>
    <item android:id="@+id/sendMail" android:title="@string/send_mail"/>
</menu>